fix overflow styling

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,6 +25,8 @@
 
 .sidebar-wrapper {
   width: 250px;
+  height: 100vh;
+  background-color: #f1f4f9;
   transition: width 0.3s;
   overflow-y: auto;
   overflow-x: hidden;
@@ -34,10 +36,8 @@
 }
 .sidebar {
   width: 250px;
-  height: 100vh;
   padding: 12px;
   padding-top: 36px;
-  background-color: #f1f4f9;
   .links {
     a {
       display: block;
@@ -115,6 +115,9 @@
 
 .page-container {
   padding: 12px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 100vh;
 }
 
 .run-box {
